--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.App > p {
+  color: red;
+  font-size: 22px;
+}
+
+.App > p:hover {
+  color: orange;
+}
